--- a/HomeWork3bySamnang/style.css
+++ b/HomeWork3bySamnang/style.css
@@ -54,6 +54,8 @@
     justify-content: space-around;
     align-items: center;
 }
+
+
 .section1 {
     margin-top: 40px;
     width: 100%;
@@ -67,7 +69,7 @@
 }
 .section1 p {
     font-family: 'Kantumruy Pro', sans-serif;
-    font-size: 0px;
+    size: 20px;
 }
 
 .section1 .container{
