--- a/HomeWork3bySamnang/style.css
+++ b/HomeWork3bySamnang/style.css
@@ -34,7 +34,7 @@
 .header h1{
     text-align: center;
     color: darkblue;
-    font-size: 25px;
+    font-size: 30px;
     font-family: 'Kantumruy Pro', sans-serif;
 }
 .header p{
@@ -54,7 +54,11 @@
     justify-content: space-around;
     align-items: center;
 }
-
+.section1 {
+    margin-top: 40px;
+    width: 100%;
+    /* background-color: green; */
+}
 
 .section1 {
     margin-top: 40px;
@@ -93,6 +97,49 @@
     text-align: center;
     color: darkblue;
 }
+.container .item {
+    width: 25%;
+    height: 250px;
+    box-shadow: 3px 3px 10px 5px black;;
+}
+.item:nth-of-type(1){
+
+    background-image: url('./image/12.jpg');
+}
+
+.item:nth-of-type(2){
+
+    background-image: url('./image/12.jpg');
+}
+
+.item:nth-of-type(3){
+
+    background-image: url('./image/12.jpg');
+}
+.section .item1 {
+    /* background-color: aqua; */
+    width: 25%;
+    height: 500px;
+}
+
+.item1:nth-of-type(1){
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: "KantumruyPro-Medium";
+    color: darkblue;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+
+}
+
+.item1:nth-of-type(2){
+    box-shadow: 3px 3px 10px 5px black;
+    background-image: url('./image/12.jpg');
+}
+
+
 i {
     font-size: 60px;
     color: darkblue;
